<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Reel</string>
    <string name="text_settings">Settings</string>
    <string name="text_general">General</string>
    <string name="text_toggle_night_mode">Toggle Night Mode</string>
    <string name="text_off">Off</string>
    <string name="text_on">On</string>
    <string name="desc_detail_poster">Detail poster</string>
    <string name="desc_detail_backdrop">Detail backdrop</string>
    <string name="text_share">Share</string>
    <string name="text_overview">Overview</string>
    <string name="text_open_link">Open link</string>
    <string name="text_emoticon_sad">(Ｔ▽Ｔ)</string>
    <string name="text_sort">Sort</string>
    <string name="drag_handle">Drag handle</string>
    <string name="text_group_items">Group items by</string>
    <string name="filter_movies_only">Movies only</string>
    <string name="filter_all_items">All items</string>
    <string name="filter_tv_shows_only">Tv shows only</string>
    <string name="favorite_button">Favorite button</string>
    <string name="text_favorite">Favorite</string>
    <string name="retry">Retry</string>
    <string name="error_message_global">An error occured...</string>
    <string name="text_search">Search</string>
    <string name="text_search_items">Search items...</string>
    <string name="sort_items">Sort items by</string>
</resources>