<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:elevation="@dimen/elevation_large"
    android:orientation="vertical"
    app:behavior_peekHeight="70dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:showIn="@layout/fragment_favorite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/btn_filter_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:checkedButton="@id/btn_toggle_all"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/btn_toggle_movie"
                style="@style/Widget.Reel.Button.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_movies_only" />

            <Button
                android:id="@+id/btn_toggle_all"
                style="@style/Widget.Reel.Button.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_all_items" />

            <Button
                android:id="@+id/btn_toggle_tv_show"
                style="@style/Widget.Reel.Button.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_tv_shows_only" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:alpha="0.25"
        android:contentDescription="@string/drag_handle"
        android:src="@drawable/draggable_pill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/color_on_surface_emphasis_high" />
</androidx.constraintlayout.widget.ConstraintLayout>