<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/toolbar"
    style="@style/Widget.MaterialComponents.ActionBar.Surface"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    app:title="@string/app_name" />

  <FrameLayout
    android:id="@+id/info_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?actionBarSize"
    android:background="?android:colorBackground"
    android:elevation="@dimen/elevation_large"
    android:visibility="gone">

    <include
      android:id="@+id/info"
      layout="@layout/card_info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center" />
  </FrameLayout>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="?actionBarSize">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="@dimen/spacing_normal">

      <ImageView
        android:id="@+id/backdrop"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:alpha="0.7"
        android:contentDescription="@string/desc_detail_backdrop"
        android:scaleType="centerCrop"
        android:src="?attr/colorSurface"
        app:layout_constraintTop_toTopOf="parent" />

      <androidx.cardview.widget.CardView
        android:id="@+id/card_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
          android:id="@+id/poster"
          android:layout_width="125dp"
          android:layout_height="175dp"
          android:contentDescription="@string/desc_detail_poster"
          android:scaleType="centerCrop"
          tools:src="@color/black" />
      </androidx.cardview.widget.CardView>

      <TextView
        android:id="@+id/title"
        style="?attr/textAppearanceHeadline5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        android:ellipsize="marquee"
        android:maxLines="3"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_poster"
        tools:text="Overlord" />

      <TextView
        android:id="@+id/release_date"
        style="?attr/textAppearanceSubtitle1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_normal"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:text="11/09/2018" />

      <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="@dimen/spacing_small"
        android:background="?colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_line" />

      <TextView
        android:id="@+id/genres"
        style="?attr/textAppearanceSubtitle1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="@+id/release_date"
        app:layout_constraintTop_toBottomOf="@+id/release_date"
        tools:text="Horror, War, Science Fiction" />

      <TextView
        android:id="@+id/tag_line"
        style="?attr/textAppearanceSubtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:ellipsize="marquee"
        android:maxLines="3"
        android:textColor="@color/color_on_surface_emphasis_medium"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@+id/genres"
        tools:text="Stop the unstoppable" />

      <TextView
        android:id="@+id/overview_placeholder"
        style="?textAppearanceOverline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_normal"
        android:text="@string/text_overview"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

      <TextView
        android:id="@+id/overview"
        style="?attr/textAppearanceBody1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@+id/overview_placeholder"
        tools:text="France, June 1944. On the eve of D-Day, some American paratroopers fall behind enemy lines after their aircraft crashes while on a mission to destroy a radio tower in a small village near the beaches of Normandy. After reaching their target, the surviving paratroopers realise that, in addition to fighting the Nazi troops that patrol the village, they also must fight against something else." />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab_favorite"
    style="@style/Widget.Reel.FAB"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_margin="@dimen/spacing_medium"
    android:contentDescription="@string/favorite_button"
    android:src="@drawable/ic_favorite_alt" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>